# HuntzzZ-desktop-notepad

./: .gitignore  AGENTS.md  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml
.mimocode/plans/: 1782013354666-proud-falcon.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: LockScreen.vue  YearHeatmap.vue
src/data/: holidays.ts
src/pages/AiSearch/: index.vue
src/pages/Dashboard/: index.vue
src/pages/Login/: index.vue
src/pages/My/: index.vue
src/pages/Settings/: index.vue
src/pages/WechatEditor/: index.vue
src/pages/Widget/: index.vue
src/pages/WorkTask/: index.vue
src/router/: index.ts
src/stores/: index.ts
src/styles/: global.css
src/types/: lunar-javascript.d.ts
src/utils/: ai.ts  db.ts  editor.ts  task.ts  webdav.ts
