[package]
name = "desktop-notepad"
version = "0.2.0"
description = "桌面记事本 - Tauri 2 + Vue 3"
authors = ["you"]
edition = "2021"

[lib]
name = "desktop_notepad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs-next = "2"
chrono = "0.4"
